--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <queries>
-        <package android:name="com.tencent.mobileqq"></package>
-        <package android:name="com.tencent.tim"></package>
-        <package android:name="com.tencent.mm"></package>
-        <package android:name="com.tencent.qqlite"></package>
-        <package android:name="com.qzone"></package>
-        <package android:name="com.tencent.tbs"></package>
-        <package android:name="com.tencent.qqlite"></package>
+        <package android:name="com.tencent.mobileqq" />
+        <package android:name="com.tencent.tim" />
+        <package android:name="com.tencent.mm" />
+        <package android:name="com.tencent.qqlite" />
+        <package android:name="com.qzone" />
+        <package android:name="com.tencent.tbs" />
+        <package android:name="com.tencent.qqlite" />
     </queries>
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -20,37 +20,53 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.VIBRATE" />
-
     <uses-permission
         android:name="android.permission.READ_LOGS"
         tools:ignore="ProtectedPermissions" />
-    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
-
-    <!-- 硬件加速对X5视频播放非常重要，建议开启 -->
+    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" /> <!-- 硬件加速对X5视频播放非常重要，建议开启 -->
     <uses-permission android:name="android.permission.GET_TASKS" />
 
     <application
-        android:name="com.example.yjys.application.Application"
+        android:name=".application.Application"
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
-        tools:targetApi="m"
-        android:hardwareAccelerated="true"
-        android:largeHeap="true"
-        >
+        tools:targetApi="m">
+        <activity
+            android:name=".WebActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AboutActivity"
+            android:exported="false" />
 
-        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
 
-        <activity android:name="com.example.yjys.faxianui.MusicScanerActivity" android:exported="true"/>
-        <activity android:name="com.example.yjys.faxianui.MusicPlayActivity" android:exported="true"/>
-        <activity android:name="com.example.yjys.faxianui.MusicActivity" android:exported="true"/>
-        <activity android:name="com.example.yjys.History" android:exported="true"/>
-        <activity android:name="com.example.yjys.Favorites" android:exported="true"/>
-        <activity android:name="com.example.yjys.TianQi" android:exported="true"/>
+        <activity
+            android:name=".faxianui.MusicScanerActivity"
+            android:exported="true" />
+        <activity
+            android:name=".faxianui.MusicPlayActivity"
+            android:exported="true" />
+        <activity
+            android:name=".faxianui.MusicActivity"
+            android:exported="true" />
+        <activity
+            android:name=".History"
+            android:exported="true" />
+        <activity
+            android:name=".Favorites"
+            android:exported="true" />
+        <activity
+            android:name=".TianQi"
+            android:exported="true" />
 
         <meta-data
             android:name="android.notch_support"
@@ -61,9 +77,11 @@
             android:required="false" />
 
         <activity
-            android:name="com.example.yjys.Scanner"
+            android:name=".Scanner"
             android:configChanges="orientation|screenSize|keyboardHidden" />
-        <activity android:name="com.example.yjys.LoginActivity" android:exported="true">
+        <activity
+            android:name=".LoginActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -71,21 +89,23 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.yjys.Play"
-            android:configChanges="orientation|screenSize|keyboardHidden" android:exported="true"/>
-        <activity android:name="com.example.yjys.MainActivity" android:exported="true"/>
+            android:name=".Play"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:exported="true" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true" />
 
         <service
             android:name="com.tencent.smtt.export.external.DexClassLoaderProviderService"
             android:label="dexopt"
-            android:process=":dexopt" >
-        </service>
+            android:process=":dexopt" />
 
         <activity
             android:name="com.tencent.tauth.AuthActivity"
+            android:exported="true"
             android:launchMode="singleTask"
-            android:noHistory="true"
-            android:exported="true">
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -98,14 +118,14 @@
         <activity
             android:name="com.tencent.connect.common.AssistActivity"
             android:configChanges="orientation|keyboardHidden"
+            android:exported="true"
             android:screenOrientation="behind"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            android:exported="true"/>
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity
             android:name="com.tencent.bugly.beta.ui.BetaActivity"
             android:configChanges="keyboardHidden|orientation|screenSize|locale"
-            android:theme="@android:style/Theme.Translucent"
-            android:exported="true"/>
+            android:exported="true"
+            android:theme="@android:style/Theme.Translucent" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -117,7 +137,7 @@
         </provider>
 
         <activity
-            android:name="com.example.yjys.wxapi.WXEntryActivity"
+            android:name=".wxapi.WXEntryActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="true"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
