--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id 'kotlin-android-extensions'
 }
 android {
-    compileSdkVersion 33
+    compileSdkVersion 34
     buildToolsVersion "30.0.3"
 
     compileOptions {
@@ -16,8 +16,8 @@ android {
 
     defaultConfig {
         applicationId "com.example.yjys"
-        minSdkVersion 17
-        targetSdkVersion 33
+        minSdkVersion 19
+        targetSdkVersion 34
         versionCode 20220925
         versionName "2.7"
 
@@ -42,19 +42,22 @@ android {
     lint {
         abortOnError false
     }
+    buildFeatures{
+        viewBinding = true
+    }
 
 }
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar","*.aar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "androidx.core:core-ktx:1.6.0"
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation "androidx.core:core-ktx:1.9.0"
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'com.github.bumptech.glide:glide:4.5.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'com.github.bumptech.glide:glide:4.13.1'
     implementation 'org.jsoup:jsoup:1.13.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
     testImplementation 'junit:junit:4.13'
@@ -66,7 +69,14 @@ dependencies {
     implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-andx-11'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
-    implementation "com.google.android.material:material:1.2.1"
+    implementation "com.google.android.material:material:1.8.0"
+
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+//    implementation "androidx.lifecycle:lifecycle-livedata:2.7.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha05"
+
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+    implementation 'androidx.webkit:webkit:1.4.0'
 
     implementation "com.androidkun:XTabLayout:1.1.3"
 
@@ -77,7 +87,7 @@ dependencies {
     implementation  'com.umeng.umsdk:asms:1.4.1'// 必选
     implementation 'com.umeng.umsdk:link:1.1.0'
     implementation 'com.umeng.umsdk:apm:1.4.2' // 错误分析升级为独立SDK，看crash数据请一定集成，可选
-    implementation  'com.umeng.umsdk:abtest:1.0.0'//使用U-App中ABTest能力，可选
+    implementation 'com.umeng.umsdk:abtest:1.0.0'//使用U-App中ABTest能力，可选
 
     implementation  'com.umeng.umsdk:share-core:7.1.6'//分享核心库，必选
     implementation  'com.umeng.umsdk:share-board:7.1.6'//分享面板功能，可选
@@ -104,12 +114,13 @@ dependencies {
     //tips
     implementation 'com.github.gabriel-TheCode:AestheticDialogs:1.3.4'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.2.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
+    implementation "com.squareup.retrofit2:converter-gson:2.6.1"
 
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.code.gson:gson:2.9.0'
 
     //音乐播放缓存
-    implementation'com.danikula:videocache:2.7.0'
+    implementation 'com.danikula:videocache:2.7.0'
 
     //recyclerview库
 /*    implementation 'com.github.momodae.RecyclerViewLibrary2:layoutmanager:1.0.1'
