--- a/app/build.gradle
+++ b/app/build.gradle
@@ -125,8 +125,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'  // 添加 Glide 依赖项
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'  // 添加 Glide 注解处理器
 
-    //使用MotionLayout动画
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta1'
+    //使用lottie动画
+    implementation 'com.airbnb.android:lottie:4.2.0'
 
 
     //recyclerview库
