1.添加关于我们页面的返回以及协议页的返回 2.发现页添加一个按钮

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
         <activity
+            android:name=".OrangeActivity"
+            android:exported="false" />
+        <activity
             android:name=".LikeActivity"
             android:exported="true" />
         <activity
