--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,15 +29,35 @@ android {
         ndk {
             //设置支持的SO库架构
             //abiFilters 'armeabi' , 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
-            abiFilters "armeabi-v7a"
+            abiFilters "armeabi-v7a", 'arm64-v8a'
+        }
+    }
+    signingConfigs{
+        config{
+            storeFile file('../yjysZhouym.jks')
+            storePassword '123456'
+            keyAlias = 'release'
+            keyPassword '123456'
         }
     }
 
     buildTypes {
         debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'),
+                    'proguard-rules.pro'
+            signingConfig signingConfigs.config
             manifestPlaceholders = ["qqappid":"101904713"]
         }
-    }
+        release{
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'),
+            'proguard-rules.pro'
+            signingConfig signingConfigs.config
+            manifestPlaceholders = ["qqappid":"101904713"]
+
+        }
+}
     namespace 'com.example.yjys'
     lint {
         abortOnError false
@@ -114,14 +134,15 @@ dependencies {
     //tips
     implementation 'com.github.gabriel-TheCode:AestheticDialogs:1.3.4'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
-    implementation "com.squareup.retrofit2:converter-gson:2.6.1"
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 
     implementation 'com.google.code.gson:gson:2.9.0'
 
     //音乐播放缓存
     implementation 'com.danikula:videocache:2.7.0'
 
+    // 解析图片
     implementation 'com.github.bumptech.glide:glide:4.12.0'  // 添加 Glide 依赖项
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'  // 添加 Glide 注解处理器
 
