--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,10 +79,10 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'com.github.bumptech.glide:glide:4.13.1'
     implementation 'org.jsoup:jsoup:1.13.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation'com.youth.banner:banner:1.4.10'
 
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-andx-11'
@@ -92,16 +92,16 @@ dependencies {
     implementation "com.google.android.material:material:1.8.0"
 
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-//    implementation "androidx.lifecycle:lifecycle-livedata:2.7.0"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha05"
+    implementation "androidx.lifecycle:lifecycle-livedata:2.7.0"
+//    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha05"
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
-    implementation 'androidx.webkit:webkit:1.4.0'
+    implementation 'androidx.webkit:webkit:1.6.1'
 
     implementation "com.androidkun:XTabLayout:1.1.3"
 
     implementation 'com.alibaba:fastjson:1.2.73'
-    implementation 'com.alibaba:fastjson:1.1.71.android'
+    implementation 'com.alibaba:fastjson:1.2.73'
 
     implementation  'com.umeng.umsdk:common:9.4.2'// 必选
     implementation  'com.umeng.umsdk:asms:1.4.1'// 必选
@@ -117,7 +117,7 @@ dependencies {
 
     implementation 'com.umeng.umsdk:share-qq:7.1.6'//QQ完整版
     implementation 'com.tencent.tauth:qqopensdk:3.53.0'//QQ官方依赖库，必选
-    implementation 'com.squareup.okhttp3:okhttp:3.12.12'//QQ SDK在3.53.0版本及以上时需要集成okhttp官方依赖库，必选
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'//QQ SDK在3.53.0版本及以上时需要集成okhttp官方依赖库，必选
 
 
     //添加此行
@@ -143,17 +143,13 @@ dependencies {
     implementation 'com.danikula:videocache:2.7.0'
 
     // 解析图片
-    implementation 'com.github.bumptech.glide:glide:4.12.0'  // 添加 Glide 依赖项
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'  // 添加 Glide 注解处理器
+    implementation 'com.github.bumptech.glide:glide:4.13.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     //使用lottie动画
     implementation 'com.airbnb.android:lottie:4.2.0'
 
 
-    //recyclerview库
-/*    implementation 'com.github.momodae.RecyclerViewLibrary2:layoutmanager:1.0.1'
-    implementation 'com.github.momodae.RecyclerViewLibrary2:pulltorefresh:1.0.1'
-    implementation 'com.github.momodae.RecyclerViewLibrary2:adapter:1.0.1'
-    implementation 'com.github.momodae.RecyclerViewLibrary2:library:1.0.1'*/
+
 
 }
